--- a/themes/pure/layout/post.html
+++ b/themes/pure/layout/post.html
@@ -11,7 +11,6 @@
 
     gtag('config', 'G-WV23EXEF9X');
   </script>
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- iOS Safari -->
@@ -87,13 +86,26 @@
         {{/if}}
   </header>
       {{post.contentHTML}}
+
+  <div>
+    <!-- utterances - Github issue comment -->
+    <script src="https://utteranc.es/client.js"
+	repo="IMBlues/IMBlues.github.io"
+	issue-term="pathname"
+	label="blog-comment"
+	theme="github-light"
+	crossorigin="anonymous"
+	async>
+    </script>
+  </div>
+
   <footer class="Footer">
         <div>&copy; {{siteMeta.title}} 2021</div>
         <div>&centerdot;</div>
         <div>Powered by <a href="https://github.com/dragonman225/notablog" target="_blank"
             rel="noopener noreferrer">Notablog</a>.
         </div>
-    </footer>
+  </footer>
 </body>
 
 </html>
